cmake_minimum_required(VERSION 3.20)
project(winlamb-tests CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT WIN32)
    message(FATAL_ERROR "winlamb tests target Win32 only.")
endif()

# Header-only winlamb library, exposing the repo root as include path
# so user code can write `#include <winlamb/window_main.h>`.
add_library(winlamb INTERFACE)
target_include_directories(winlamb INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/..")
# Character set: defaults to MBCS (ANSI) so the samples exercise the *A
# flavour of the Win32 API. Pass -DWINLAMB_TESTS_UNICODE=ON to switch to
# the Unicode (*W) build path.
option(WINLAMB_TESTS_UNICODE "Build winlamb tests with _UNICODE/UNICODE defined" OFF)

if(WINLAMB_TESTS_UNICODE)
    target_compile_definitions(winlamb INTERFACE
        UNICODE
        _UNICODE
        NOMINMAX)
    if(MSVC)
        set_property(DIRECTORY APPEND PROPERTY VS_GLOBAL_CharacterSet Unicode)
    endif()
else()
    target_compile_definitions(winlamb INTERFACE
        _MBCS
        NOMINMAX)
    if(MSVC)
        set_property(DIRECTORY APPEND PROPERTY VS_GLOBAL_CharacterSet MultiByte)
    endif()
endif()

# Many winlamb features (Common Controls v6 image lists, treeview TVITEMEX,
# progressbar marquee, statusbar tooltips, SHGetImageList, etc.) live behind
# Windows XP-era version guards in the SDK. TDM-GCC / older MinGW default to
# a sub-XP _WIN32_WINNT, which hides those symbols even when the libraries
# themselves are present. Pin XP (0x0501) as the build-time API surface so
# the headers expose what the code actually uses; binaries still run on Win9x
# at runtime — missing entry points just fail at LoadLibrary/GetProcAddress
# time, which is what the existing os_version.h gates already check for.
target_compile_definitions(winlamb INTERFACE
    _WIN32_WINNT=0x0501
    WINVER=0x0501
    _WIN32_IE=0x0501)
target_link_libraries(winlamb INTERFACE comctl32)

if(MSVC)
    target_compile_options(winlamb INTERFACE /utf-8 /permissive- /W3)
endif()

set(WINLAMB_MANIFEST "${CMAKE_CURRENT_SOURCE_DIR}/../win10.exe.manifest")

# Convenience function: declare a winlamb sample as a Win32 GUI exe with
# the bundled Common Controls v6 / Win10 manifest embedded.
function(add_winlamb_sample name)
    set(rc_file "${CMAKE_CURRENT_BINARY_DIR}/${name}_manifest.rc")
    file(WRITE "${rc_file}"
        "// Generated by CMake -- embeds the winlamb v6 common controls manifest.\n"
        "1 24 \"${WINLAMB_MANIFEST}\"\n")

    add_executable(${name} WIN32 ${ARGN} "${rc_file}")
    target_link_libraries(${name} PRIVATE winlamb)
    set_target_properties(${name} PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
    if(MSVC)
        # We embed the manifest ourselves through the .rc file above; tell the
        # linker not to also auto-generate a default one (CVT1100 collision).
        target_link_options(${name} PRIVATE "/MANIFEST:NO")
    endif()
endfunction()

add_subdirectory(01_hello_window)
add_subdirectory(02_textbox_form)
add_subdirectory(03_listview_demo)
add_subdirectory(04_treeview_demo)
add_subdirectory(05_combobox_progress)
